add vuejs + fix bug on teacher/store

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11104,19 +11104,60 @@ a.text-dark:focus {
   font-family: "Lato", sans-serif;
 }
 
-.homepage {
-  display: -webkit-box;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-          flex-direction: column;
-  -webkit-box-align: center;
-          align-items: center;
+.aside {
+  padding: 80px 20px 0;
+  box-sizing: border-box;
+  background-color: white;
+  position: fixed;
+  height: 100vh;
+  width: 300px;
+  box-shadow: 0.125rem 0 0.25rem rgba(0, 0, 0, 0.075) !important;
 }
 
-.homepage h1 {
-  font-size: 70px;
-  font-weight: lighter;
-  color: grey;
+.aside p {
+  color: #969696;
+}
+
+.create__session {
+  margin: 0 40px 20px 340px;
+  padding-top: 70px;
+}
+
+.create__teacher {
+  padding: 70px 40px 20px;
+  box-sizing: border-box;
+}
+
+.navbar {
+  width: 100%;
+  z-index: 1;
+}
+
+.choice {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: justify;
+          justify-content: space-between;
+  margin: 80px 0;
+}
+
+.choice > div {
+  -webkit-box-flex: 1;
+          flex: 1;
+  margin: 0 50px;
+}
+
+@media (max-width: 850px) {
+  .choice > div {
+    margin: 10px;
+  }
+}
+
+@media (max-width: 700px) {
+  .choice {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+            flex-direction: column;
+  }
 }
 
