--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -3,6 +3,7 @@ $body-bg: #f8fafc;
 
 // Typography
 $font-family-sans-serif: 'Nunito', sans-serif;
+$font-family-content: 'Montserrat', sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
@@ -17,6 +18,7 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+$black: rgb(30, 30, 30);
 
 
 @import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
