--- a/resources/sass/global.scss
+++ b/resources/sass/global.scss
@@ -1,58 +1,47 @@
-*{
-    font-family: 'Lato', sans-serif;
+body{
+    position: relative;
+    font-family: $font-family-content;
+    min-height: 100vh;
+    padding-bottom: 100px;
+    box-sizing: border-box;
 }
 
-.aside{
-    padding: 80px 20px 0;
+.container{
+    margin: 0 20px;
+}
+
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0,0,0,0);
+    border: 0;
+}
+
+.mail{
+    background-color: rgba(150, 150, 150, 0.2);
+    padding: 20px;
     box-sizing: border-box;
-    background-color: white;
-    position: fixed;
-    height: 100vh;
-    width: 300px;
-    box-shadow: 0.125rem 0  0.25rem rgba(0, 0, 0, 0.075) !important;
+    overflow-y: hidden ;
+
+    h1{
+        font-size: 25px;
+        margin-bottom: 10px;
+    }
+    h2{
+        font-size: 20px;
+        margin-bottom: 10px;
+    }
     p{
-        color: rgb(150, 150, 150);
+        line-height: 1.4;
     }
-}
 
-.create__session{
-    margin: 0 40px 20px 340px;
-    padding-top: 70px;
-}
-
-.create__teacher{
-    padding: 70px 40px 20px;
-
-    box-sizing: border-box;
-}
-
-.navbar{
-    width: 100%;
-    z-index: 1;
-}
-
-.choice{
-    display: flex;
-    justify-content: space-between;
-    margin: 80px 0;
-    > div{
-        flex: 1;
-        margin: 0 50px;
+    a{
+        text-decoration: none;
+        font-weight: bold;
+        color: #4fadc4;
     }
-}
-
-@media(max-width:850px){
-    .choice > div{
-        margin: 10px;
-    }
-}
-
-@media(max-width:700px){
-    .choice{
-        flex-direction: column;
-    }
-}
-
-.fakelist{
-    display: none;
 }
