--- a/resources/sass/global.scss
+++ b/resources/sass/global.scss
@@ -10,6 +10,11 @@ body{
     margin: 0 20px;
 }
 
+.main-title{
+    @include title(rgba(#4fadc4, 0.5), 50px, -20px, 30px);
+    margin-bottom: 20px;
+}
+
 .sr-only {
     position: absolute;
     width: 1px;
@@ -44,4 +49,57 @@ body{
         font-weight: bold;
         color: #4fadc4;
     }
+}
+
+.form{
+    &__container{
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+        gap: 15px;
+        margin-bottom: 10px;
+    }
+
+    &__button{
+        display: block;
+        background-color: $black;
+        padding: 10px;
+        color: white;
+        font-size: 14px;
+        font-family: $font-family-content;
+        cursor: pointer;
+    }
+
+    &-group{
+        position: relative;
+        border: 1px solid $black;
+        padding: 10px;
+        margin-bottom: 20px;
+
+        label{
+            position: absolute;
+            background-color: white;
+            padding: 0 10px;
+            top: -10px;
+            left:20px;
+        }
+        input{
+            display: block;
+            border: none;
+            outline: none;
+            font-size: 15px;
+            width: 100%;
+        }
+
+    }
+}
+
+.sendButton{
+    display: block;
+    background-color: $black;
+    padding: 10px;
+    color: white;
+    font-size: 14px;
+    font-family: $font-family-content;
+    cursor: pointer;
+    border: none;
 }
