--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,6 +10,8 @@
 @import 'header';
 @import 'home';
 @import 'show';
+@import 'aside';
+@import 'choice';
 
 // Bootstrap
 // @import '~bootstrap/scss/bootstrap';
