--- a/resources/sass/mixin.scss
+++ b/resources/sass/mixin.scss
@@ -3,6 +3,7 @@
     text-transform: uppercase;
     letter-spacing: 2.4px;
     display: inline-block;
+    position: relative;
 
     &::after{
         content:"";
