change placeholder + add mediaqueries for mail

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -307,6 +307,17 @@ body {
   margin-right: 20px;
 }
 
+@media (min-width: 900px) {
+  .mail p {
+    -webkit-column-count: 2;
+       -moz-column-count: 2;
+            column-count: 2;
+    -webkit-column-gap: 20px;
+       -moz-column-gap: 20px;
+            column-gap: 20px;
+  }
+}
+
 .navigation {
   display: -webkit-box;
   display: flex;
