--- a/resources/sass/global.scss
+++ b/resources/sass/global.scss
@@ -134,3 +134,11 @@ body{
         margin-right: 20px;
     }
 }
+
+@media(min-width: 900px){
+    .mail p{
+        column-count: 2;
+        column-gap: 20px;
+    }
+
+}
