--- a/resources/sass/home.scss
+++ b/resources/sass/home.scss
@@ -22,6 +22,9 @@
                 span{
                     font-weight: bold;
                 }
+                p{
+                    margin-bottom: 5px;
+                }
             }
             .burger{
                 width: 50px;
