--- a/public/css/app.css
+++ b/public/css/app.css
@@ -341,6 +341,13 @@ body {
   margin-bottom: 40px;
 }
 
+.form-group .invalid-feedback {
+  position: absolute;
+  left: 0;
+  top: calc( 100% + 10px);
+  color: red;
+}
+
 .form-group label {
   position: absolute;
   background-color: white;
@@ -699,6 +706,11 @@ body {
 
 .home .cards .card .card__managment__input:checked ~ label .burger div {
   background-color: white;
+}
+
+#app {
+  max-width: 1280px;
+  margin: 0 auto;
 }
 
 .show__title {
