--- a/resources/sass/show.scss
+++ b/resources/sass/show.scss
@@ -13,6 +13,11 @@
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
             gap: 15px;
+            .emptyCards{
+                background-color: rgba(yellow, 0.2);
+                padding: 20px;
+                line-height: 1.5;
+            }
             .card{
                 position: relative;
                 background-color: rgba(150, 150, 150, 0.2);
@@ -111,8 +116,6 @@
             }
         }
     }
-
-
 
 }
 
